# auto-ai-cn

./: .gitignore  Cargo.toml
factorio-api/: Cargo.toml
factorio-api/src/: lib.rs  mod_portal.rs
pack-mod/: Cargo.toml
share_mod/: Cargo.toml  mod-list.json
share_mod/src/: main.rs
src/: flow.rs  lib.rs  main.rs  pack.rs  persistent.rs  progress.rs  translation.rs
src/templates/: toggle.py
