[workspace]
members = ["factorio-api"]

[package]
name = "tanvec-ai-cn"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
anyhow = "1.0.102"
factorio-api = { path = "factorio-api" }
rust-ini = "0.21.3"
indexmap = { version = "2.14.0", features = ["serde"] }
deepseek-api = "0.1.1"
dotenvy = "0.15.7"
schemars = "1.2.1"
tokio = "1.52.3"
zip = "8.6.0"
env_logger = "0.11.10"
clap = { version = "4", features = ["derive"] }
